# pycl-fft

./: .gitignore  .gitmodules  .test-conda-env-py3.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
VkFFT/vkFFT/: vkFFT.h
doc/: conf.py  index.rst  ref_cl_wrapper.rst  ref_transform.rst  ref_vk_wrapper.rst
pycl_fft/: __init__.py  clfft.py  util.py  vkfft.py
src/: wrap-clfft.cpp  wrap-vkfft.cpp
test/: test_bindings.py  test_transform.py
